refractor: clearify api doc explaination
